Fix for bug 25269. We can now reenter GlobalWindowImpl::RunTimeout. This may happen if a modal dialog (and hence a subevent loop) is invoked from a timeout - as it does with the Mail Account Wizard window. r=norris