dom/src/base/nsGlobalWindow.h
@@ -210,6 +210,7 @@ protected:
    nsTimeoutImpl**               mTimeoutInsertionPoint;
    nsTimeoutImpl*                mRunningTimeout;
    PRUint32                      mTimeoutPublicIdCounter;
+   PRUint32                      mTimeoutFiringDepth;
    PRBool                        mFirstDocumentLoad;
    nsString                      mStatus;
    nsString                      mDefaultStatus;
@@ -239,6 +240,7 @@ struct nsTimeoutImpl {
   char                *filename;      /* filename of setTimeout call */
   PRUint32            lineno;         /* line number of setTimeout call */
   const char          *version;       /* JS language version string constant */
+  PRUint32              firingDepth;    /* stack depth at which timeout isfiring */
   nsTimeoutImpl       *next;
 };
 
